sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:13: error: not found: value echane
      echane(i, BlancRouge)
      ^